Bug 1749744 - Handle re-creating PBackgroundStarter, r=handyman,kershaw

This is possible if the socket process bridge ends up being restarted,
so needs to be handled as an edge-case. The approach taken here is to
tightly couple the task queue, pid, and BackgroundStarterChild instances
so that they can be swapped out at runtime whenever InitStarter is
called.

There is no test in the current patch as it is apparently still
unsupported to restart the socket process after a crash.

Differential Revision: https://phabricator.services.mozilla.com/D135746